<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.matrix.kotodo.TodoListViewModel" />

        <variable
            name="fragment"
            type="com.matrix.kotodo.itemedit.TodoItemEditFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/objective_edit_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.editingObjective}"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="test all use cases" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/priority_holder"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/objective_edit_field">

            <TextView
                android:id="@+id/priority_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/forkawesome"
                android:text="@string/edit_priority_label"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="\uf005" />

            <TextView
                android:id="@+id/priority_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{viewModel.editingState.toString()}"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/priority_label"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="(A)" />

            <Spinner
                android:id="@+id/priority_spinner"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/priority_state"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dates_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priority_holder">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/start_date_holder"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:onClick="@{() -> fragment.editDate(true)}"
                android:visibility="visible"
                app:layout_constraintEnd_toStartOf="@id/finish_date_holder"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/start_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/forkawesome"
                    android:text="@string/edit_start_date_label"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="\uf271" />

                <TextView
                    android:id="@+id/start_date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@{viewModel.editingStartDate.toString()}"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/start_date_label"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="2021-05-20" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/finish_date_holder"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginStart="24dp"
                android:onClick="@{() -> fragment.editDate(false)}"
                android:visibility="@{viewModel.finishDateVisibility()}"
                app:layout_constraintStart_toEndOf="@id/start_date_holder"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/finish_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/forkawesome"
                    android:text="@string/edit_finish_date_label"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="\uf274" />

                <TextView
                    android:id="@+id/finish_date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@{viewModel.editingFinishDate.toString()}"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/finish_date_label"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="2021-05-20" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tag_selectors_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dates_holder">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/projects_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/project_add_button"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/tag_projects"
                    android:foreground="@drawable/ic_baseline_add_24"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minHeight="40dp"
                    android:onClick="@{() -> fragment.addProject()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/project_tag_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/project_add_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tagsFlow="@{viewModel.editingProjectMap}"
                    tools:itemCount="2"
                    tools:listitem="@layout/tag_fragment" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/context_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/projects_holder">

                <Button
                    android:id="@+id/context_add_button"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/tag_contexts"
                    android:foreground="@drawable/ic_baseline_add_24"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minHeight="40dp"
                    android:onClick="@{() -> fragment.addContext()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/context_tag_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/context_add_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tagsFlow="@{viewModel.editingContextMap}"
                    tools:itemCount="2"
                    tools:listitem="@layout/tag_fragment" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/custom_tags_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/context_holder">

                <Button
                    android:id="@+id/custom_tag_add_button"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/tag_customs"
                    android:foreground="@drawable/ic_baseline_add_24"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minHeight="40dp"
                    android:onClick="@{() -> fragment.addCustomTag()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/custom_tag_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    app:customTagsFlow="@{viewModel.editingCustomTagsMap}"
                    app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/custom_tag_add_button"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:itemCount="2"
                    tools:listitem="@layout/custom_tag_fragment" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/confirm_floating_action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/ic_baseline_check_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/custom_tags_holder"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>